test/1.2/errors/T_ESHNEG.dml
/*
  © 2021-2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;

method init {
    /// ERROR ESHNEG
    1 << -1;
    /// ERROR ESHNEG
    1 >> -1;
}
